--- a/package.json
+++ b/package.json
@@ -10,10 +10,18 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.24.0",
+    "@react-native-clipboard/clipboard": "^1.16.3",
+    "@react-native-firebase/app": "^23.4.0",
+    "@react-native-firebase/firestore": "^23.4.0",
+    "@react-native-firebase/messaging": "^23.4.0",
+    "@react-native/new-app-screen": "0.81.4",
     "react": "19.1.0",
     "react-native": "0.81.4",
-    "@react-native/new-app-screen": "0.81.4",
-    "react-native-safe-area-context": "^5.5.2"
+    "react-native-change-icon": "^5.0.0",
+    "react-native-linear-gradient": "^2.8.3",
+    "react-native-safe-area-context": "^5.5.2",
+    "react-native-vector-icons": "^10.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
